objects/LOB_Service__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates that the service is either active or inactive for the line of business. A status of active allows that service to be selected on a booking.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOB_Service_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>LOB Service Key</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <referenceTo>Line_of_Business__c</referenceTo>
        <relationshipLabel>LOBs Services</relationshipLabel>
        <relationshipName>LOBs_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>LOBs Services</relationshipLabel>
        <relationshipName>LOBs_Services</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>LOB Service</label>
    <nameField>
        <displayFormat>LOBS-{00000}</displayFormat>
        <label>LOB Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOBs Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>